tests/sksl/errors/OpaqueTypeInInterfaceBlock.dsl.glsl
### Compilation failed:

error: interface blocks are not yet supported
error: no type named 'Bad'
2 errors
